--select inside article -- set layout for guest users

--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -1,3 +1,7 @@
+shopPage:
+  url: /page/:shopId/:pageId
+  param:  {module: guestPage, action: index }
+
 home:
   url: /
   param: { module: home, action: index }
